# sdl-snake

./: .gitignore  CMakeLists.txt  Info.plist  Makefile  README.md  README.txt  package_mac_bundle.sh  sdl-snake.desktop
src/: CMakeLists.txt  SDLMain.m  boolean.h  crash.c  deb_mem.c  deb_mem.h  difficulty.c  game.c  game_structs.c  game_structs.h  images.h  input.c  input.h  list.c  list.h  menu.c  score.c  sdl_snake.c  sounds.h  sprite_strip.c  sprite_strip.h  stage.c  stage.h  stage_list.h  transition.c
